-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.2.0, Qt Creator 4.4.0
-
None
-
Linux Mint 18.2
QNX 6.6 armv7
-
360609eb7abe93c477ab410eb8ab511fdb98f9f9
A similar bug has already be opened on a old version of Qt Creator (https://bugreports.qt.io/browse/QTCREATORBUG-12980).
Nevertheless It seems the problem still persist in Qt Creator 4.2 with QNX 6.6 armv7 kits.
Indeed we can add command and in Preferences|Debugger|GDB|Additional Startup Commands" like set solib-search-path because but Qt Creator seems to ignore it.
The result is the impossibilty to automaticaly load symbols for QML plugins loads in an application via QML Loader, or even access breakpoint in thoses loaded plugins.
One solution is to:
- Launch the debugging
- Load a first time the QML module via command in my application
- Pause the debugging
- Type the command "set solib-search-path <path/to/builded/plugin/in/debug/mode> in the Debbuger Log console
- The symbols are loaded
- Resume the debugging
- Unload the QML module
- Reload it again so it can access the breakpoint in both QML and .cpp files
But this is a tedious workaround.
Edit:
The problem below has been solved and it still doesn't work with Qt Creator 4.4.0
-I tried to test with Qt Creator 4.4 but there is another problem right now (https://bugreports.qt.io/browse/QTCREATORBUG-18804).-
- resulted from
-
QTCREATORBUG-12980 GDB startup clobbers "Additional Startup Commands" set for GDB in the debugger configuration
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-18812 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
204886,3 | Debugger: Add to solib-search-path, don't replace it | 4.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |