Debugger: Add to solib-search-path, don't replace it

Task-number: QTCREATORBUG-18812
Change-Id: I0fb8d81d55e9928bd3825c510a11ab426ec082c6
Reviewed-by: Orgad Shaneh <orgads@gmail.com>